# ComputerGraphics

./: ._RenderEngineSkeletonCode  peg13.blend  peg13.blend1
342assignment1/: ._peg16.blend1  ._report.txt  peg16.blend  peg16.blend1  report.txt
OpenGl-lab-solutions/lab8/: ._CMakeLists.txt
RenderEngineSkeletonCode/: ._BUILDING.txt  ._CMakeLists.txt  ._Skeleton  ._build  ._common  ._external
RenderEngineSkeletonCode/Skeleton/: ._01_-_Default1noCulling.dds  ._Skeleton  ._earthobj.mtl  ._iphone.mtl  ._male-02-1noCulling.dds  ._male02_dds.mtl  ._mtlShader.frag  ._mtlShader.vert  ._orig_02_-_Defaul1noCulling.dds  ._renderApp.cpp  ._uvmap.DDS  iphone.mtl  mtlShader.frag  mtlShader.vert  renderApp.cpp
RenderEngineSkeletonCode/common/: ._BasicMaterialShader.cpp  ._BasicMaterialShader.hpp  ._Camera.cpp  ._Camera.hpp  ._ColorShader.cpp  ._ColorShader.hpp  ._Controls.cpp  ._Controls.hpp  ._Group.cpp  ._Group.hpp  ._MTLShader.cpp  ._MTLShader.hpp  ._Material.cpp  ._Material.hpp  ._Mesh.cpp  ._Mesh.hpp  ._Object.cpp  ._Object.hpp  ._Objloader.cpp  (+36 more)
lab02-matrices/: ._CMakeLists.txt  CMakeLists.txt  Matrix.cpp  Matrix.h  README  Vector.h  matrixMain.cpp
lab03-transforms/: ._CMakeLists.txt  CMakeLists.txt  CMakeLists.txt~  Colour.h  Display.cpp  Display.h  Doxyfile  Makefile  mytransformMain.cpp  setPath.sh  transformMain.cpp  transforms.cpp  transforms.h  utility.h
lab04-mosaicing/: ._CMakeLists.txt  ._mosaicing.cpp  CMakeLists.txt  Makefile  mosaicing.cpp
lab08-openGl/: ._CMakeLists.txt  BUILDING.txt  CMakeLists.txt  README.md
lab09-OpenGLContinuation/: ._build
(+149 files in other folders)
